# SimpleUseCase

./: README.md
src/SimpleUseCase/: CMakeLists.txt  README.md
src/SimpleUseCase/Examples/CPlusPlus/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/Boost/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/Boost/ProgramOptions/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/Boost/ProgramOptions/src/: main.cpp  stdafx.h
src/SimpleUseCase/Examples/CPlusPlus/GRPC/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/GRPC/SimpleGRPC/: CMakeLists.txt  SimpleGRPC.proto
src/SimpleUseCase/Examples/CPlusPlus/GRPC/SimpleGRPCProxy/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/GRPC/SimpleGRPCProxy/src/: SimpleGrpcProxy.cpp  SimpleGrpcProxy.h  SimpleGrpcProxyPrivate.cpp  SimpleGrpcProxyPrivate.h  main.cpp
src/SimpleUseCase/Examples/CPlusPlus/GRPC/SimpleGRPCServer/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/GRPC/SimpleGRPCServer/src/: SimpleGrpcServer.cpp  SimpleGrpcServer.h  main.cpp
src/SimpleUseCase/Examples/CPlusPlus/OpenCV/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/OpenCV/FacialRecognitionDemo/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/OpenCV/FacialRecognitionDemo/src/: main.cpp
src/SimpleUseCase/Examples/CPlusPlus/PocoEmailSender/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/PocoEmailSender/src/: main.cpp
src/SimpleUseCase/Examples/CPlusPlus/Qt/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/Qt/Qt3DDemo/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/Qt/Qt3DDemo/src/: main.cpp
src/SimpleUseCase/Examples/CPlusPlus/Qt/QtQuickDemo/: CMakeLists.txt
src/SimpleUseCase/Examples/CPlusPlus/Qt/QtQuickDemo/src/: QtQuickDemo.qml  QtQuickDemo.qrc  main.cpp
src/SimpleUseCase/Examples/CSharp/: CMakeLists.txt
src/SimpleUseCase/Examples/Java/: CMakeLists.txt  module.cmake
src/SimpleUseCase/Examples/Python/: CMakeLists.txt
src/scripts/: build_default_x32.bat  build_default_x64.bat  build_linux.sh  build_mac.sh  build_sublime_text.sh  build_vc100_x32.bat  build_vc100_x64.bat  build_vc140_x32.bat  build_vc140_x64.bat  build_vc143_x32.bat  build_vc143_x64.bat
